--- a/Yukimi/Yukimi.csproj
+++ b/Yukimi/Yukimi.csproj
@@ -9,13 +9,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Models\StorageModels\ExampleUserProfile.json" />
     <None Remove="Resources\Logo\applogo.png" />
     <None Remove="Resources\WebsiteIcons\mangadex-logo.svg" />
+    <None Remove="WebsiteResources\websites.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Models\StorageModels\ExampleUserProfile.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="WebsiteResources\websites.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
-    <PackageReference Include="System.Text.Json" Version="9.0.9" />
     <PackageReference Include="WPF-UI" Version="4.0.3" />
   </ItemGroup>
 
@@ -27,8 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\WebsiteModels\HTMLRequest\" />
-    <Folder Include="Views\" />
+    <Folder Include="Models\WebsiteModels\HTMLRequests\" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
